test/bad/rep0.pacc
/*
nopacc 5:8 'expected Defns, or end-of-input'
*/

S <- .**
